# TauriLeptosTailwindTemplate

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src-ui/: Cargo.toml  index.html  input.css
src-ui/public/scss/: main.scss
src-ui/src/: lib.rs  main.rs
