[package]
name = "src_tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.1", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
# Distinct from the binary target (also `src_tauri`) so the cdylib doesn't
# emit a colliding `src_tauri.dll`/`src_tauri.pdb`, which breaks Windows
# bundling (WiX os error 3 / NSIS os error 5).
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
