[package]
name = "src_ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tauri-wasm = { git = "https://github.com/p1mo/tauri-wasm", features = [
  "all",        # for all api bindings
  "plugin-all", # for all plugin bindings. should you do this? no.
] }

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "55fe1d1", features = [
  "all",
] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
leptosfmt = "0.1"
